# spark-connect-cpp

./: .clang-format  .dockerignore  .env  .env.example  .gitignore  .gitmessage  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.yaml  install-hooks.sh  install_deps.sh  launch.json  setup_build_tools.sh  spark_client.pc.in  spark_connect_cpp.pc.in  vcpkg.json
.cache/clangd/index/: aggregations.cpp.33081F032FF7BAA1.idx  config.cpp.DB87CFCCDCBCC861.idx  config.h.7B1E1D8329380A67.idx  configuration.cpp.2C31DC6676227E01.idx  databricks_serverless_fixture.cpp.B5AA39E009B9B831.idx  databricks_serverless_fixture.h.21C522010946786D.idx  dataframe.cpp.58E1E7AB8AB1FD63.idx  dataframe.cpp.9221C8EFBAFBBABF.idx  dataframe.h.C5D4B976D3C7760F.idx  dataframe_columns.cpp.3A5706C2BF7E01C2.idx  dataframe_reader.cpp.D97CAF0D12FB90CC.idx  dataframe_writer.cpp.0BF3C40225A23015.idx  env_loader.cpp.C09D636F38D1746A.idx  env_loader.h.0F1EF1ED98A5FB2E.idx  expressions.cpp.822D5720BB77142E.idx  functions.cpp.74FE9718F122C48B.idx  functions.h.C6FB1692671ED572.idx  graphframe.cpp.356C0E801E443E75.idx  graphframe.h.CE52ABBEE83802BD.idx  graphframes.cpp.642E9C9890A981A1.idx  group.cpp.F9176E79AD2587A2.idx  group.h.6A47386FBF2D1165.idx  logging.h.F84DDB320304E896.idx  reader.cpp.F76142F03AA4A44D.idx  reader.h.C509F5D7ED5751EA.idx  risk_management.cpp.BEE601A3114DD480.idx  runtime_config.cpp.2A0BA61B02FCD84B.idx  runtime_config.h.73E33F12F6239C9E.idx  serverless_databricks_cluster.cpp.EAC06CF14AEC4D6E.idx  session.cpp.3AC821E18455A618.idx  session.h.312C06307CCDA6FB.idx  spark_fixture.cpp.B5DE0EBF318E1343.idx  spark_fixture.h.6407C8791EDFEEE3.idx  tokenizer.cpp.65908E911AA411E6.idx  tokenizer.cpp.99696B3C456B950D.idx  tokenizer.h.724674B15A8E99AF.idx  traditional_databricks_cluster.cpp.7CA14A28C92F4F21.idx  types.cpp.F6A3E2E34049BABB.idx  types.h.889A88D1AC2B5BE6.idx  writer.cpp.D2BB3B4B4AB9ACFE.idx  (+1 more)
.devops/: build-pipeline-setup-tools.sh  install-deps.sh  vcpkg-configuration.json  vcpkg-package-export.sh  vcpkg-package.cmake  vcpkg-setup.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: api_change_request.yml  bug_report.md  bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  performance_issue.yml
.github/workflows/: build.yml  build_and_release_dependency_sdk.yml  build_and_test.yml  c-cpp.yml  clang-format.yml  codeql.yml  test.yml
datasets/: people.csv  people.json  people.txt  people_no_header.csv
docs/: API_REFERENCE.md  SETUP.md
hooks/: pre-commit  pre-push
scripts/: install-deps.sh  install-hooks.sh
src/: buf.yaml  client.cpp  client.h  config.cpp  config.h  dataframe.cpp  dataframe.h  dataframe_reader.cpp  expressions.cpp  expressions.h  functions.cpp  functions.h  graphframe.cpp  graphframe.h  group.cpp  group.h  logging.h  main.cpp  reader.cpp  reader.h  relations.cpp  relations.h  runtime_config.cpp  runtime_config.h  session.cpp  session.h  spark_types.cpp  spark_types.h  types.cpp  types.h  writer.cpp  writer.h
src/ml/feature/: regextokenizer.cpp  regextokenizer.h  tokenizer.cpp  tokenizer.h  word_2_vec.cpp  word_2_vec.h  word_2_vec_model.cpp  word_2_vec_model.h
src/ml/param/: param.h  param_map.cpp  param_map.h  param_map_proto.h
src/spark/connect/: base.proto  catalog.proto  commands.proto  common.proto  expressions.proto  graphframes.proto  ml.proto  ml_common.proto  pipelines.proto  relations.proto  types.proto
tests/: aggregations.cpp  configuration.cpp  dataframe.cpp  dataframe_columns.cpp  dataframe_reader.cpp  dataframe_writer.cpp  expressions.cpp  graphframes.cpp  risk_management.cpp  serverless_databricks_cluster.cpp  spark_integration.cpp  traditional_databricks_cluster.cpp  types.cpp
tests/databricks/: databricks_serverless_fixture.cpp  databricks_serverless_fixture.h  serverless_databricks_cluster.cpp  traditional_databricks_cluster.cpp
tests/databricks/ml/feature/: tokenizer.cpp  word_2_vec.cpp  word_2_vec_model.cpp
tests/ml/: tokenizertest.cpp
tests/spark/: aggregations.cpp  configuration.cpp  dataframe.cpp  dataframe_columns.cpp  dataframe_reader.cpp  dataframe_writer.cpp  expressions.cpp  graphframes.cpp  risk_management.cpp  spark_fixture.cpp  spark_fixture.h
tests/spark/ml/feature/: params_clear.cpp  tokenizer.cpp  word_2_vec.cpp  word_2_vec_model.cpp
tests/util/: env_loader.cpp  env_loader.h
